Fixed main page look and feel

--- a/MEILI_Travel_Diary/public/views/main.html
+++ b/MEILI_Travel_Diary/public/views/main.html
@@ -1,56 +1,24 @@
-<!--
-MEILI Travel Diary - web interface that allows to annotate GPS trajectories
-fused with accelerometer readings into travel diaries
-
-Copyright (C) 2014-2016 Adrian C. Prelipcean - http://adrianprelipcean.github.io/
-Copyright (C) 2016 Badger AB - https://github.com/Badger-MEILI
-
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU Affero General Public License as
-published by the Free Software Foundation, either version 3 of the
-License, or (at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details.
-
-You should have received a copy of the GNU Affero General Public License
-along with this program.  If not, see <http://www.gnu.org/licenses/>.
--->
-
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
 
 <div class="container">
 
     <div class="row">
-        <div class="col-lg-12 text-center">
-            <h1> {{translation.meilipers}}</h1>
-            <h2> {{translation.startanot}} <a href="/#/map">{{translation.now}}</a></h2>
-            <p class="lead">{{translation.DESCRIPTION}}</p>
+        <div class="col-lg-12">
+            <h1> MEILI - your personal travel diary</h1>
+            <p class="lead ">Meili is one of the Æsir in Norse mythology. His name appears to mean mile-stepper, and if accurate, could mean that he was a Norse god of travel.</p>
 
-            <p>{{translation.IntroP1}}</p>
-            <p>{{translation.IntroP2}}</p>
-            <p>{{translation.IntroP3}}</p>
-            <p>{{translation.IntroP4}}</p>
+            <p class="text-center">
+                <br>
+                <a class="btn btn-default btn-success btn-lg" href="/#/map">Start annotating now</a>
+                <br><br>
+            </p>
+
+            <p>The MEILI System is a semi-automatic travel diary collection system that leverages modern mobile and web Geographical Information System (GIS) capabilities to allow the seamless collection (MEILI Mobility Collector mobile application) and the periodic and convenient travel-diary-annotation (MEILI Travel Diary web application) of the trips of its users.</p>
+            <p>The collected travel diaries give valuable insight into the travel needs of individuals and the population, which are essential in transportation planning.</p>
+            <p>The use of the MEILI System is voluntary. The mobile- and web applications give user-controls for suspending collection or deleting a collected trip and the collected data is only analyzed in an anonymous form for research purposes.</p>
+            <p>The MEILI System is funded by the Swedish Transport Administration (TRV 2014/10422) and developed by the MEILI Project Team.</p>
 
         </div>
     </div>
     <!-- /.row -->
 
 </div>
-
-<!--<h1>Home</h1>
-<p>
-    <a href="/#/login">Administration</a>
-</p>-->
-
-
-</body>
-</html>
