--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -103,6 +103,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li lang="en" onclick="activateMe(id)" class="active" id="firstOption"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+                        <li lang="en" onclick="activateMe(id)" id="firstAndAHalfOption"><a href="/map">Annotate</a></li>
                         <!--<li lang="en" onclick="activateMe(id)" id="secondOption"><a href="/statistics">Statistics</a></li>-->
                         <li lang="en" onclick="activateMe(id)" id="thirdOption"><a href="/faq">FAQ</a></li>
                         <li lang="en" onclick="activateMe(id)" id="fourthOption"><a href="/contact">Contact</a></li>
