Correcting paths after file move

--- a/MEILI_Travel_Diary/public/views/partials/main.html
+++ b/MEILI_Travel_Diary/public/views/partials/main.html
@@ -9,7 +9,7 @@
 
             <p class="text-center">
                 <br>
-                <a class="btn btn-default btn-success btn-lg" href="/#/map">Start annotating now</a>
+                <a class="btn btn-default btn-success btn-lg" href="/map">Start annotating now</a>
                 <br><br>
             </p>
 
