--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -97,13 +97,15 @@
                     </ul>
 
                     <ul class="nav navbar-nav" style="width:20%; visibility: hidden;">
-                        <p lang="en" id="assistant" class="navbar-text navbar-right hidden-xs navtext-right" style="color:#F88A8A; display: none">Assistant <span class="glyphicon glyphicon-info-sign"></span></p>
+                        <li>
+                            <p lang="en" id="assistant" class="navbar-text navbar-right hidden-xs navtext-right" style="color:#F88A8A; display: none">Assistant <span class="glyphicon glyphicon-info-sign"></span></p>
+                        </li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                        <p class="navbar-text navbar-right hidden-xs navtext-right" style="visibility: hidden;" id="badge_holder">
-                            <a href="#/map">Trips left <span class="badge" id="tripsLeft">42</span></a>
-                        </p>
+                        <li id="badge_holder">
+                            <a href="#/map">Trips left <span class="badge" id="tripsLeft"></span></a>
+                        </li>
                     </ul>
 
                 </div><!-- /.navbar-collapse -->
