link path change

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -104,7 +104,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li id="badge_holder">
-                            <a href="#/map">Trips left <span class="badge" id="tripsLeft"></span></a>
+                            <a href="/map">Trips left <span class="badge" id="tripsLeft"></span></a>
                         </li>
                     </ul>
 
