--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -85,7 +85,7 @@
                         <li lang="en" onclick="activateMe(id)" id="firstAndAHalfOption"><a href="/map">Annotate</a></li>
                         <!--<li lang="en" onclick="activateMe(id)" id="secondOption"><a href="/statistics">Statistics</a></li>-->
                         <li lang="en" onclick="activateMe(id)" id="thirdOption"><a href="/faq">FAQ</a></li>
-                        <li lang="en" onclick="activateMe(id)" id="fourthOption"><a href="/contact">Contact</a></li>
+                        <!--<li lang="en" onclick="activateMe(id)" id="fourthOption"><a href="/contact">Contact</a></li>-->
 
         <!--
                         <li id="language-selector">
