--- a/MEILI_Travel_Diary/public/stylesheets/custom_elem.css
+++ b/MEILI_Travel_Diary/public/stylesheets/custom_elem.css
@@ -149,7 +149,7 @@ html, body {
  */
 
 
-#map-page .row .col-md-6 {
+#map-page > .row > .col-md-6 {
     padding: 0px;
 }
 
@@ -182,7 +182,9 @@ html, body {
     max-width: 300px;
 }
 
-
+/*
+    Timeline line
+ */
 .timeline:before {
     top: 0;
     bottom: 0;
@@ -191,7 +193,8 @@ html, body {
     width: 6px;
     background-color: #828282;
     left: 50%;
-    margin-left: -1.5px;
+    margin-left: 0px;
+    height: 100vh;
 }
 
 .tldate {
@@ -243,7 +246,7 @@ html, body {
 }
 
 .timeline li {
-    margin-bottom: 25px;
+    margin-bottom: 16px;
     position: relative;
 
 }
@@ -264,10 +267,11 @@ html, body {
     timeline panels
  */
 .timeline li .timeline-panel {
+    margin-left: 6px;
     width: 50%;
     float: left;
     background: #fff;
-    border: 6px solid #c5c5c5;
+    border: 6px solid #828282;
     padding: 20px;
     position: relative;
     -webkit-border-radius: 8px;
@@ -284,13 +288,13 @@ IMPORTANT IMPLEMENT FOR SMARTPHONE A SET OF RULES**/
 .timeline li .timeline-panel .form-control{
     -webkit-appearance: none;
     border: 0;
-    border-bottom: 1px solid #c25b4e;
+    border-bottom: 4px solid #c25b4e;
 }
 
 .timeline li .timeline-panel .form-control-inline{
     -webkit-appearance: none;
     border: 0;
-    border-bottom: 1px solid #c25b4e;
+    border-bottom: 4px solid #c25b4e;
     max-width: 260px;
     display: inline;
     font-size:16px;
@@ -361,25 +365,34 @@ IMPORTANT IMPLEMENT FOR SMARTPHONE A SET OF RULES**/
 
 
 /** timeline circle icons **/
-.timeline li .tl-circ {
+
+.timeline li .tl-ctrl {
     position: absolute;
-    top: 50px;
+    top: 30px;
     left: 50%;
+   z-index: 2;
+}
+.timeline li .tl-ctrl li {
+    list-style: none;
+    line-height: 42px;
     text-align: center;
+    width: 40px;
+    height: 40px;
+    margin-left: -45px;
+    margin-bottom: 10px;
     background: #2f4767;
     color: #fff;
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-    margin-left: -16px;
-    border: 3px solid #90acc7;
+    border: 3px solid #828282;
     border-top-right-radius: 50%;
     border-top-left-radius: 50%;
     border-bottom-right-radius: 50%;
     border-bottom-left-radius: 50%;
-   z-index: 2;
 }
-.timeline li .tl-circ .glyphicon{
+.timeline li .tl-ctrl li a {
+    color: #fff;
+    cursor: pointer;
+}
+.timeline li .tl-ctrl .glyphicon{
     top: 0px;
 }
 
@@ -388,7 +401,6 @@ IMPORTANT IMPLEMENT FOR SMARTPHONE A SET OF RULES**/
 
 .tl-heading h4{
     margin: 0;
-    color: #c25b4e;
 }
 
 .tl-body p, .tl-body ul {
