Renaming css file

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -46,7 +46,7 @@
 
         <script type="text/javascript" src="/javascripts/src/app.js"></script>
 
-        <link href="/stylesheets/custom_elem.css" rel="stylesheet" type="text/css" />
+        <link href="/stylesheets/styles.css" rel="stylesheet" type="text/css" />
 
 
         <title>MEILI</title>
