Adding a confirm dialog

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -34,6 +34,7 @@
         <script type="text/javascript" src="/javascripts/src/meili/Log.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/Request.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/Api.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/ui/Confirm.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/ui/ErrorMsg.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/ui/LMap.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/ui/Timeline.js"></script>
