--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -2,8 +2,9 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>MEILI</title>
 
         <!-- External libraries -->
         <script type="text/javascript" src="/javascripts/lib/jquery.js"></script>
@@ -28,6 +29,14 @@
         <script type="text/javascript" src="/javascripts/lib/emitter_1.2.1/index.js"></script>
         <script type="text/javascript" src="/javascripts/lib/moment_2.15.1.js"></script>
 
+        <script>
+            // Google Universal Analytics tracking code
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        </script>
+
         <!-- Custom scripts -->
         <script type="text/javascript" src="/javascripts/src/config.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/Util.js"></script>
@@ -48,9 +57,6 @@
         <script type="text/javascript" src="/javascripts/src/app.js"></script>
 
         <link href="/stylesheets/styles.css" rel="stylesheet" type="text/css" />
-
-
-        <title>MEILI</title>
 
         <script>
             // Todo move into nav ui
