Splitting tripleg specifics from timeline into TriplegPanel

--- a/MEILI_Travel_Diary/public/views/metapage.html
+++ b/MEILI_Travel_Diary/public/views/metapage.html
@@ -46,6 +46,7 @@
         <script type="text/javascript" src="/javascripts/src/meili/ui/Confirm.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/ui/ErrorMsg.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/ui/LMap.js"></script>
+        <script type="text/javascript" src="/javascripts/src/meili/ui/TriplegPanel.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/ui/Timeline.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/ui/Login.js"></script>
         <script type="text/javascript" src="/javascripts/src/meili/model/User.js"></script>
