--- a/MEILI_Travel_Diary/public/stylesheets/styles.css
+++ b/MEILI_Travel_Diary/public/stylesheets/styles.css
@@ -220,8 +220,25 @@ html, body {
 }
 
 .timeline .tldate.start {
+    text-align: left;
+    width: 100%;
     background-color: #5aab65;
     padding: 4px;
+}
+
+.timeline .tldate.end {
+    text-align: left;
+    width: 100%;
+}
+
+.timeline .tldate > .controls {
+    text-align: right;
+    padding-top: 4px;
+}
+
+.delete-trip:hover {
+    color: white;
+    background-color: #c25b4e;
 }
 
 .timeline .tldate .glyphicon-flag {
@@ -277,6 +294,12 @@ html, body {
 /*
     timeline panels
  */
+.timeline .important-time {
+    line-height: 2;
+    font-size: 150%;
+    font-weight: bold;
+}
+
 .timeline li .timeline-panel {
     margin-left: 6px;
     width: 50%;
