--- a/MEILI_Travel_Diary/public/views/partials/login.html
+++ b/MEILI_Travel_Diary/public/views/partials/login.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-6 col-md-4 col-md-offset-4">
-            <h1 lang="en" class="text-center login-title">Sign in to continue to start annotating your trips</h1>
+            <h1 lang="en" class="text-center login-title">Sign in to start annotating your trips</h1>
             <div class="account-wall">
                 <img class="profile-img" src="../images/avatar.png" alt="">
                 <form class="form-signin">
