modified sponsorship text

--- a/MEILI_Travel_Diary/public/views/partials/main.html
+++ b/MEILI_Travel_Diary/public/views/partials/main.html
@@ -16,7 +16,7 @@
             <p>The MEILI System is a semi-automatic travel diary collection system that leverages modern mobile and web Geographical Information System (GIS) capabilities to allow the seamless collection (MEILI Mobility Collector mobile application) and the periodic and convenient travel-diary-annotation (MEILI Travel Diary web application) of the trips of its users.</p>
             <p>The collected travel diaries give valuable insight into the travel needs of individuals and the population, which are essential in transportation planning.</p>
             <p>The use of the MEILI System is voluntary. The mobile- and web applications give user-controls for suspending collection or deleting a collected trip and the collected data is only analyzed in an anonymous form for research purposes.</p>
-            <p>The MEILI System is funded by the Swedish Transport Administration (TRV 2014/10422) and developed by the MEILI Project Team.</p>
+            <p>The MEILI System was originally developed in the SPOT-project which was funded by the Swedish Transport Administration (TRV 2014/10422)..</p>
 
         </div>
     </div>
