--- a/MEILI_Travel_Diary/public/views/partials/faq.html
+++ b/MEILI_Travel_Diary/public/views/partials/faq.html
@@ -1,4 +1,3 @@
-
 <div class="container">
     <br />
 
@@ -47,7 +46,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <p lang="en">MEILI tries to capture all of your trips. This entails the collection of sensor data from your phone (GPS and accelerometer) and the automatic trip-semantic enrichment of the collected information (time-, geographic-, and travel mode aspects of your trip and its triplegs as well as the purpose and destination of your trip). As with all technical and automatic processes, a number of things can go wrong. However, you can help MEILI by verifying and, if necessary, by complementing and changing the geographic aspects of the collected information and how this information been enriched (location and start and end time of a trip and its triplegs, the travel mode of a tripleg, and the destination and purpose of the trip). MEILI currently supports the following direct edit operations: delete the entire trip or just a trip leg <span class="glyphicon glyphicon-trash"></span>, merge trips <span class="glyphicon glyphicon-share-alt"></span>, change start and end time of the trip and trips legs, add travel mode for each trip leg and the destiantion and purpose of the trip. To insert a transition point (where you changed travel mode) or change the stop point of the trip you just click on a point and change the attribute of that point.</p>
+                    <p lang="en">MEILI tries to capture all of your trips. This entails the collection of sensor data from your phone (GPS and accelerometer) and the automatic trip-semantic enrichment of the collected information (time-, geographic-, and travel mode aspects of your trip and its triplegs as well as the purpose and destination of your trip). As with all technical and automatic processes, a number of things can go wrong. However, you can help MEILI by verifying and, if necessary, by complementing and changing the geographic aspects of the collected information and how this information been enriched (location and start and end time of a trip and its triplegs, the travel mode of a tripleg, and the destination and purpose of the trip. MEILI currently supports the following direct edit operations: delete the entire trip or just a trip leg <span class="glyphicon glyphicon-trash"></span>, merge trips <span class="glyphicon glyphicon-share-alt"></span>, change start and end time of the trip and trips legs, add travel mode for each trip leg and the destination and purpose of the trip. To insert a transition point (where you changed travel mode) or change the stop point of the trip you just click on a point and change the attribute of that point.</p>
                     <p lang="sv">Du ska granska start och sluttid för förflyttningen, färdsätt, eventuella bytespunkter, målpunkt och ärende. MEILI försöker registrera alla dina förflyttningar. Det innebär automatisk insamling från din mobil. Tekniska och automatiska processer är dock inte alltid felfria, och du kan hjälpa MEILI genom att verifiera och justera den insamlade informationen.</p>
                 </div>
             </div>
@@ -137,7 +136,7 @@
             </div>
             <div id="collapseSix" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <p lang="en"> You can add a missing location for your place of transfer by clicking on the point closest to where you made you transfer and change this point to a transition point.</p>
+                    <p lang="en"> You can add a missing transfer point by clicking on the point closest to where you made you transfer and change this point to a transition point.</p>
                     <p lang="sv"> Du kan lägga till en missad bytespunkt genom att dubbelklicka på förflyttningen (linje på kartan) och dra punkten till önskad plats. </p>
                 </div>
             </div>
@@ -182,7 +181,7 @@
             </div>
             <div id="collapse2miss" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <p lang="en">The predefined destiantions are taken from the Open street map POI database. If you can't find your destination in the drop list you can add a new destination. Choose "Add new" from the drop list, choose a name of the place and click on "Place point on map". When you do this you can place the marker on the map and create a new destination.</p>
+                    <p lang="en">The predefined destinations are taken from the Open street map POI database. If you can't find your destination in the drop list you can add a new destination. Choose "Add new" from the drop list, choose a name of the place and click on "Place point on map". When you do this you can place the marker on the map and create a new destination.</p>
                     <p lang="sv">Du kan komplettera förflyttningen med en ny punkt genom att dubbelklicka på förflyttningen (linje på kartan) och dra den nya punkten till önskad plats.</p>
                 </div>
             </div>
@@ -198,7 +197,7 @@
             </div>
             <div id="collapse1edit" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <p lang="en">No, you cannot make changes to personal destiantions that you have previously added. But you can always add a new destination if there is something wrong with the one you previously added.</p>
+                    <p lang="en">No, you cannot make changes to personal destinations that you have previously added. But you can always add a new destination if there is something wrong with the one you previously added.</p>
                     <p lang="sv">Ja, du kan justera både plats (genom att flytta markören på kartan) och annan information (via dialogrutorna) för de platser du har lagt till.</p>
                 </div>
             </div>
@@ -294,7 +293,7 @@
             </div>
             <div id="collapse9" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <p lang="en">For further help or any oher issues please contact the project manager at andreas.allstrom@sweco.se.</p>
+                    <p lang="en">For further help or any other issues please contact the project manager at andreas.allstrom@sweco.se.</p>
                     <p lang="sv">Du kan alltid lämna synpunkter till MEILI genom kontaktformuläret på hemsidan "Kontakt". Det går också att kontakta SPOT via spot@sweco.se.</p>
                 </div>
             </div>
